--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
+  height: 100vh;
+  position: relative;
+  background-color: #EAEAEA;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.question{
+  height: 100px;
+  background-color: #F7F7F7;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  border-bottom: 1px solid #EAEAEA;
+  
+}
+
+.skip{
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+
+}
+
+.skin_time{
+  margin-left: 10px;
+  height:  30px;
+  width: 30px;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #368fcf;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  width: 50px;
+  height: 30px;
+  color: white;
+  background-color: #45A3E5;
+  border: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  background-color: #368fcf;
+}
+.answer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px;
+  cursor: pointer;
+}
+.selectAnswer{
+  border: 3px solid #0CE508;
 }
